2021-08-09  Cameron McCormack  <heycam@apple.com>

        Cache recently atomized all-whitespace strings for use by the HTML parser
        https://bugs.webkit.org/show_bug.cgi?id=228858

        Reviewed by Yusuke Suzuki.

        We have a memory optimization where the HTML parser will atomize any
        text node string that is all whitespace.  This can be expensive,
        as we need to loop over the string's characters three times: to detect
        that it is indeed all whitespace, to hash the string, and to compare
        to any existing entry in the atom hash table.

        Many whitespace strings encountered during parsing have a limited
        form -- they have a few runs of consecutive equal whitespace
        characters, e.g. it's common to see a newline followed by a number
        of space characters.  We can take advantage of this by compressing
        the whitespace string into a simple run-length encoded form while
        we loop over the characters to check that the string is all
        whitespace.  Unlike a hash, this encoded form perfectly identifies the
        string content.

        We add a WhitespaceCache that is owned by the Document, which stores
        the most recently atomized all-whitespace string encountered by the
        parser for a given length, and keys it with the encoded form.  The
        parser can then look up the WhitespaceCache and find an AtomString
        without the need to perform a lookup in the atom hash table.

        The WhitespaceCache continues to hold on to the cached whitespace
        atoms for the life of the document.  The WhitespaceCache itself
        takes a bit over 1 KiB when empty, and if completely populated would
        take a bit over 2 KiB plus 8 KiB of atom string data (a 1 byte string,
        plus a 2 byte string, plus a 3 byte string, etc.).  This doesn't seem
        high enough to be worth clearing this out just to avoid memory usage